<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/auth_header_image_height"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_description"
            android:scaleType="fitXY"
            android:src="@drawable/auth_screens_background" />

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text ="Naresh "
             android:textSize ="25sp"
             android:textColor="#fff"
             android:layout_gravity="center"
             android:textStyle ="bold"
             />

    </FrameLayout>

    <com.example.myapplicationfirebase.utils.BoldTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/title_login"
        android:textColor="@color/colorprimarytext"
        android:textSize="@dimen/title_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/framelayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="35dp"
        android:hint="@string/et_hint_email_id"
        android:textColorHint="@color/colorsecondarytext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <com.example.myapplicationfirebase.utils.MSPEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="@dimen/et_padding"
            android:textColor="@color/colorprimarytext"
            android:textSize="@dimen/et_textsize"
            tools:text="abc@gmail.com"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:hint="@string/et_hint_password"
        android:textColorHint="@color/colorsecondarytext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_email">

        <com.example.myapplicationfirebase.utils.MSPEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="@dimen/et_padding"
            android:textColor="@color/colorprimarytext"
            android:textSize="@dimen/et_textsize"
            tools:text="123456" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.example.myapplicationfirebase.utils.BoldTextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:foreground="?attr/selectableItemBackground"
        android:padding="@dimen/clickable_text_view_padding"
        android:text="@string/lbl_forgot_password"
        android:textColor="@color/colorprimarytext"
        android:textSize="@dimen/forgot_password_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_password" />

    <com.example.myapplicationfirebase.utils.MSPButtonText
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_background"

        android:gravity="center"
        android:foreground="?attr/selectableItemBackground"
        android:paddingTop="@dimen/btn_padding"
        android:paddingBottom="@dimen/btn_padding"
        android:text="@string/btn_lbl_login"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_textsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf ="@id/tv_forgot_password" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop ="5dp"
        android:gravity ="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        >
        <com.example.myapplicationfirebase.utils.BoldTextView
            android:id ="@+id/dont_have_an_account"
            android:layout_width ="wrap_content"
            android:layout_height ="wrap_content"
            android:layout_marginTop ="16dp"
            android:padding="@dimen/clickable_text_view_padding"
            android:text="@string/dont_have_an_account"
            android:textColor="@color/colorsecondarytext"
            android:textSize="@dimen/lbl_text_view_text_size"
            />

        <com.example.myapplicationfirebase.utils.BoldTextView
            android:id ="@+id/tv_register"
             android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:foreground="?attr/selectableItemBackground"

            android:padding="@dimen/clickable_text_view_padding"
            android:text="@string/register"
            android:textColor="@color/colorprimarytext"
            android:textSize="@dimen/lbl_text_view_text_size"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>